# MDVRP

./: IT3708-MDVRP.cabal  stack.yaml
.stack-work/install/x86_64-osx/lts-8.2/8.0.2/flag-cache/: Chart-1.8.2-LNvEKLHebCdAZizS2ua1Ix  Chart-diagrams-1.8.2-DsGPbDNlZep6cimjamaPQ0  HUnit-1.5.0.0-DvjF79OHhCC7SzfeEty4OI  JuicyPixels-3.2.8-JQG2D4nVzpU8XevZTzbbIE  MissingH-1.4.0.1-9coaol0yE2sDmwhkmxpvhx  MonadRandom-0.5.1-IY6HiWu00vQLARukQW3KMH  OneTuple-0.2.1-7xFCZYYP3bD3K0JO3QlNLg  SVGFonts-1.6.0.1-4O7BdqgcaRegDGb08VpP3  StateVar-1.1.0.4-5dJbnTVECtEAhfJXPZKdbO  active-0.2.0.12-DnQZnL72YXwLkPSQxJPhNl  adjunctions-4.3-5CqTSM7liCdC9cb4N2IolK  ansi-terminal-0.6.2.3-4HPxin1iv6RAndS8lH3nzo  ansi-wl-pprint-0.6.7.3-3GSHFrIr1fs45bsgKkZbLF  async-2.1.1-4n6HEMPJR2eJK0JpvCfuPK  attoparsec-0.13.1.0-HCAgpBrKCLJ5li8FbfXxE1  base-orphans-0.5.4-ABoxiBf7nXc7Qqh66CgYc9  base64-bytestring-1.0.0.1-4O9TExPPz6eI82Yj7L4SIj  bifunctors-5.4.1-B27lbd71hBJ2VXEJmV4sQN  blaze-builder-0.4.0.2-CGB8BvrFgghHy5bLy0SFOg  blaze-markup-0.7.1.1-7tIWNv8iALFJhJ4kVxNmNT  blaze-svg-0.3.6-71CwzrVsfpl669dSLxONba  bytes-0.15.2-CoxH8CioAOK8h6CcNcuhd  call-stack-0.1.0-FYVrCPXGP9EGAuTW32963O  cereal-0.5.4.0-BsAGxfp8yAs3CiRo2E875e  cereal-vector-0.2.0.1-LMqxnfPlR985aTdWy9P7M6  colour-2.3.3-7zspnmhVLMd3uThUzy60rY  comonad-5-ETWy8l913C0Kq2HEAZg6Cb  contravariant-1.4-ETyVlWBlFwj93UDOdH22No  data-default-class-0.1.2.0-GsXqKN6o1X9jr0fF5qCVD  diagrams-core-1.4-8cg0FhRVAtmLYqX8DWu1hD  diagrams-lib-1.4.0.1-92k3vIAW9egH0b4ydR2QlQ  (+55 more)
src/: Evolution.hs  Grouping.hs  Main.hs  Routing.hs  Scheduling.hs  Types.hs  Utils.hs
(+178 files in other folders)
