name:                 IT3708-MDVRP
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               Jonas Laksen
maintainer:           jonaslaksen@live.com
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable IT3708-MDVRP
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5, Chart, Chart-diagrams, split, MissingH, containers, random, MonadRandom, random-shuffle
  hs-source-dirs:       src
  default-language:     Haskell2010
